# Lab6

./: Lab6.sln
Lab6/: CMakeLists.txt  Lab6.vcxproj  Lab6.vcxproj.filters  lab.h  lab06.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
